Mobile screen overflow fixed

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -4,9 +4,6 @@
   align-items: center;
   height: 100vh;
   border-bottom: 1px solid black;
-  //@media (max-width: 768px) {
-  //  height: 75vh;
-  //}
 }
 .services{
   &-container{
@@ -293,12 +290,17 @@
     &-image-container{
       height: 200px;
       width: 200px;
+
       &-first{
         margin-bottom: -50px;
       }
       & img{
         height: 100%;
         width: 100%;
+      }
+      @media only screen and (max-width: 768px) {
+        width: 150px;
+        height: 150px;
       }
     }
   }
